@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2006-11-28
+ChangeLog - 2006-11-29
 
 
 Version 0.2.2 (under dev!):
+   * added auto completion with channels and filenames
    * fixed memleak in keyboard input
    * fixed refresh bug when changing config options if window is splited
    * added space between chat and nicklist when position is "right" (bug #17852)
